k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - args:
            - sh
            - -c
            - npm start & sleep 10 && node src/scripts/init-dht.js && node src/scripts/init-ice.js && node src/scripts/init-tracker.js && wait
          image: backend
          imagePullPolicy: Never
          livenessProbe:
            exec:
              command:
                - wget
                - --no-verbose
                - --tries=1
                - --spider
                - http://localhost:5000/
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 10
          name: backend
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
