k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: database
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: database
          imagePullPolicy: Never
          livenessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - db.adminCommand('ping')
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 10
          name: database
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
      restartPolicy: Always
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data
