k8s/stunturn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: stunturn
  name: stunturn
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: stunturn
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: stunturn
    spec:
      hostNetwork: true
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: stunturn
          imagePullPolicy: Never
          name: stunturn
          volumeMounts:
            - mountPath: /etc/coturn/turnserver.conf
              name: stunturn-cm0
              readOnly: true
              subPath: turnserver.conf
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: turnserver.conf
                path: turnserver.conf
            name: stunturn-cm0
          name: stunturn-cm0
