k8s/tracker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: tracker
  name: tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tracker
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: tracker
    spec:
      containers:
        - image: quoorex/bittorrent-tracker
          livenessProbe:
            exec:
              command:
                - wget
                - --no-verbose
                - --tries=1
                - --spider
                - http://localhost:8000/stats
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
          name: webtorrent-tracker
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
