k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: backend
