k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    io.kompose.service: database
spec:
  ports:
    - port: 27017
      targetPort: 27017
      name: mongo
  selector:
    io.kompose.service: database
