k8s/dht-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dht
  labels:
    io.kompose.service: dht
spec:
  ports:
    - port: 3479
      targetPort: 3479
      name: dht
  selector:
    io.kompose.service: dht
