k8s/stunturn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stunturn
  labels:
    io.kompose.service: stunturn
spec:
  type: NodePort
  ports:
    - port: 3478
      targetPort: 3478
      protocol: TCP
      name: stun-tcp
    - port: 3478
      targetPort: 3478
      protocol: UDP
      name: stun-udp
    - port: 49152
      targetPort: 49152
      protocol: UDP
      name: turn-start
    - port: 51800
      targetPort: 51800
      protocol: UDP
      name: turn-end
  selector:
    io.kompose.service: stunturn
