k8s/tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: tracker
  name: tracker
spec:
  ports:
    - name: "32265"
      port: 32265
      targetPort: 8000
  selector:
    io.kompose.service: tracker
